@@ -1,6 +1,9 @@
 """Provide a (g)dbm-compatible interface to bsddb.hashopen."""
 
 import sys
+if sys.py3kwarning:
+    import warnings
+    warnings.warnpy3k("in 3.x, dbhash has been removed", DeprecationWarning, 2)
 try:
     import bsddb
 except ImportError:
